--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -5,33 +5,39 @@
 
 {% block body %}
 
-		<h1>Nos Produits phares</h1>
-		<div class="row">
-			{% for i in 1..3%}
-				<div class="col">
-					<div class="card">
-						<img src="https:/picsum.photos/200/200" class="img-fluid" alt="image du produit"/>
-						<div class="card-body">
-							<h4 class="card-title">Superbe Chaise en Bois</h4>
-							<p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim soluta quisquam consequatur minus quidem eaque in at nam sint ex est, eligendi deleniti cumque deserunt fugiat quas? Tenetur, nihil fugit.</p>
-							<a href="#" class="btn btn-primary btn-sm">Détails</a>
-							<a href="#" class="btn btn-success btn-sm">
-								Ajouter</a>
-						</div>
+	<h1>Nos Produits phares</h1>
+	<div class="row">
+		{% for p in products %}
+			<div class="col">
+				<div class="card">
+					<img src="{{ p.mainPicture }}" class="img-fluid" alt="image du produit"/>
+					<div class="card-body">
+						<h4 class="card-title">{{ p.name }}
+							({{ p.price/100 }}) &euro;
+						</h4>
+
+						<span class="badge bg-primary">
+							{{p.category.name }}
+						</span>
+						<p class="card-text">{{ p.shortDescription }}</p>
+						<a href="#" class="btn btn-primary btn-sm">Détails</a>
+						<a href="#" class="btn btn-success btn-sm">
+							Ajouter</a>
 					</div>
 				</div>
-			{% endfor %}
-		</div>
-		<hr/>
-		<h2>Un service irreprochable</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus harum totam sunt ut, asperiores ipsam.</p>
-		<div class="row">
+			</div>
+		{% endfor %}
+	</div>
+	<hr/>
+	<h2>Un service irreprochable</h2>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus harum totam sunt ut, asperiores ipsam.</p>
+	<div class="row">
 
-			{% include "shared/_assurance.html.twig" with {"color": 'primary', "icon":' fas fa-truck', "text": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus harum totam sunt ut, asperiores ipsam."}  %}
+		{% include "shared/_assurance.html.twig" with {"color": 'primary', "icon":' fas fa-truck', "text": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus harum totam sunt ut, asperiores ipsam."}  %}
 
-			{% include "shared/_assurance.html.twig" with {"color": 'success', "icon":' fas fa-check', "text": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus harum totam sunt ut, asperiores ipsam."}  %}
-			{% include "shared/_assurance.html.twig" with {"color": 'warning', "icon":' fas fa-lock', "text": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus harum totam sunt ut, asperiores ipsam."}  %}
+		{% include "shared/_assurance.html.twig" with {"color": 'success', "icon":' fas fa-check', "text": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus harum totam sunt ut, asperiores ipsam."}  %}
+		{% include "shared/_assurance.html.twig" with {"color": 'warning', "icon":' fas fa-lock', "text": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus harum totam sunt ut, asperiores ipsam."}  %}
 
-		</div>
+	</div>
 
 {% endblock %}
