--- a/templates/product/category.html.twig
+++ b/templates/product/category.html.twig
@@ -6,30 +6,36 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Category Name:
-		{{ category.name }}</h1>
-	<div class="row">
-		{% for p in category.products %}
+	<ol class="breadcrumb">
+		<li class="breadcrumb-item">
+			<a href="{{ path('homepage')}}">Accueil</a>
+		</li>
+	</li>
+	<li class="breadcrumb-item active">{{category.name}}</li>
+</ol>
+<h1>Category Name:
+	{{ category.name }}</h1>
+<div class="row">
+	{% for p in category.products %}
 
-			<div class="col-3">
-				<div class="card">
-					<img src="{{ p.mainPicture }}" class="img-fluid" alt="image du produit"/>
-					<div class="card-body">
-						<h4 class="card-title">{{ p.name }}
-							({{ p.price/100 }}) &euro;
-						</h4>
+		<div class="col-3">
+			<div class="card">
+				<img src="{{ p.mainPicture }}" class="img-fluid" alt="image du produit"/>
+				<div class="card-body">
+					<h4 class="card-title">{{ p.name }}
+						({{ p.price/100 }}) &euro;
+					</h4>
 
-						<span class="badge bg-primary">
-							{{p.category.name }}
-						</span>
-						<p class="card-text">{{ p.shortDescription }}</p>
-						<a href="#" class="btn btn-primary btn-sm">Détails</a>
-						<a href="#" class="btn btn-success btn-sm">
-							Ajouter</a>
-					</div>
+					<span class="badge bg-primary">
+						{{p.category.name }}
+					</span>
+					<p class="card-text">{{ p.shortDescription }}</p>
+					<a href=" {{ path('product_show', { 'category_slug': p.category.slug, 'slug': p.slug })}}" class="btn btn-primary btn-sm">Détails</a>
+					<a href="#" class="btn btn-success btn-sm">
+						Ajouter</a>
 				</div>
 			</div>
+		</div>
 
-		{% endfor %}
-	</div>
-{% endblock %}
+	{% endfor %}
+</div>{% endblock %}
