--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -4,6 +4,16 @@
 {% endblock %}
 
 {% block body %}
+
+	<ol class="breadcrumb">
+		<li class="breadcrumb-item">
+			<a href="{{ path('homepage')}}">Accueil</a>
+		</li>
+		<li class="breadcrumb-item">
+			<a href=" {{ path('product_category', {'slug': product.category.slug }) }}">{{product.category.name}}</a>
+		</li>
+		<li class="breadcrumb-item active">{{product.name}}</li>
+	</ol>
 	Product name:
 	{{ product.name }}
 	<div class="row">
