--- a/templates/product/category.html.twig
+++ b/templates/product/category.html.twig
@@ -19,22 +19,7 @@
 		{% for p in category.products %}
 
 			<div class="col-3">
-				<div class="card">
-					<img src="{{ p.mainPicture }}" class="img-fluid" alt="image du produit"/>
-					<div class="card-body">
-						<h4 class="card-title">{{ p.name }}
-							({{ p.price/100 }}) &euro;
-						</h4>
-
-						<span class="badge bg-primary">
-							{{p.category.name }}
-						</span>
-						<p class="card-text">{{ p.shortDescription }}</p>
-						<a href=" {{ path('product_show', { 'category_slug': p.category.slug, 'slug': p.slug })}}" class="btn btn-primary btn-sm">Détails</a>
-						<a href="#" class="btn btn-success btn-sm">
-							Ajouter</a>
-					</div>
-				</div>
+				{% include "product/_product_cart.html.twig"%}
 			</div>
 
 		{% endfor %}
