--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -4,9 +4,11 @@
 {% endblock %}
 
 {% block body %}
+	{# {{ dump(app.session.getBag('flashes').get('success'))}} #}
+	{# {{ dump(app.flashes) }} #}
 
-	<ol class="breadcrumb">
-		<li class="breadcrumb-item">
+
+		<ol class="breadcrumb"> <li class="breadcrumb-item">
 			<a href="{{ path('homepage')}}">Accueil</a>
 		</li>
 		<li class="breadcrumb-item">
@@ -29,7 +31,7 @@
 				{{product.category.name }}
 			</p>
 			<p class="card-text">{{ product.shortDescription }}</p>
-			<a href="#" class="btn btn-success btn-lg">
+			<a href="{{ path('cart_add', {'id': product.id }) }}" class="btn btn-success btn-lg">
 				<i class="fas fa-shopping-cart"></i>
 				Ajouter</a>
 
