--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -11,13 +11,18 @@
 				{# {{ render(controller('App\\Controller\\CategoryController::renderMenuList'))}} #}
 				{% for c in categoryRepository.findAll() %}
 					<li class="nav-item">
-						<a class="nav-link" href="#">{{ c.name }}</a>
+						<a class="nav-link" href="{{ path('product_category',{'slug': c.slug }) }}">{{ c.name }}</a>
 					</li>
 				{% endfor %}
 
 			</ul>
 			<ul class="navbar-nav">
-
+				<li class="nav-item">
+					<a href="{{ path('cart_show') }}" class="nav-link">
+						<i class="fas fa-shopping-cart"></i>Panier({{ cartService.getTotal(productRepository)}}
+						&euro;)
+					</a>
+				</li>
 				{% if app.user %}
 					<li class="nv-item">
 						<a href="{{ path('security_logout') }}" class="btn btn-danger">Logout</a>
