--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -24,6 +24,9 @@
 					</a>
 				</li>
 				{% if app.user %}
+					<li class="nav-item">
+						<a href="#" class="nav-link">Mes commandes</a>
+					</li>
 					<li class="nv-item">
 						<a href="{{ path('security_logout') }}" class="btn btn-danger">Logout</a>
 					</li>
