Ajout du filtre twig amount

--- a/templates/product/_product_cart.html.twig
+++ b/templates/product/_product_cart.html.twig
@@ -2,7 +2,7 @@
 	<img src="{{ p.mainPicture }}" class="img-fluid" alt="image du produit"/>
 	<div class="card-body">
 		<h4 class="card-title">{{ p.name }}
-			({{ p.price/100 }}) &euro;
+			({{ p.price | amount }})
 		</h4>
 
 		<span class="badge bg-primary">
