--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -23,7 +23,7 @@
 				{% for item in items %}
 					<tr>
 						<td>{{ item.product.name }}</td>
-						<td>{{ item.product.price / 100 }}&euro;</td>
+						<td>{{ item.product.price | amount }}</td>
 						<td>
 							<a href="{{ path('cart_decrement',{'id':item.product.id}) }}" class="btn btn-sm btn-success">
 								<i class="fas fa-minus"></i>
@@ -35,7 +35,7 @@
 
 						<td>
 
-							{{ (item.product.price / 100 )* item.qty }}&euro;
+							{{ (item.product.price * item.qty ) | amount}}
 						</td>
 						<td>
 							<a href="{{ path('cart_delete',{'id':item.product.id}) }}" class="btn btn-sm btn-danger">
@@ -49,7 +49,7 @@
 			<tfoot>
 				<tr>
 					<td colspan="3">Total:</td>
-					<td colspan="2">{{ total }}&euro;</td>
+					<td colspan="2">{{ total | amount }}</td>
 				</tr>
 			</tfoot>
 		</table>
