--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -19,8 +19,7 @@
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a href="{{ path('cart_show') }}" class="nav-link">
-						<i class="fas fa-shopping-cart"></i>Panier({{ cartService.getTotal(productRepository)}}
-						&euro;)
+						<i class="fas fa-shopping-cart"></i>Panier({{ cartService.getTotal(productRepository) | amount }})
 					</a>
 				</li>
 				{% if app.user %}
